[package]
name = "mint-proxy"
version = "1.0.12"
description = "Manages the minting of new Saber tokens."
edition = "2021"
license = "AGPL-3.0"
authors = ["michaelhly <michaelhly@gmail.com>"]
homepage = "https://saber.so"
repository = "https://github.com/saber-hq/saber-periphery"
keywords = ["solana", "saber", "anchor"]

[lib]
crate-type = ["cdylib", "lib"]
name = "mint_proxy"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "=0.20.1"
anchor-spl = "=0.20.1"
bytemuck = "1.4.0"
vipers = { git = "https://github.com/goblingold/vipers", rev = "a947df7"}
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
static-pubkey = "1.0.2"
